--- a/index.html
+++ b/index.html
@@ -3,37 +3,85 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Detector de Duplicados</title>
+  <title>Marcador de Párrafos Duplicados</title>
   <style>
-    body { font-family: sans-serif; padding: 2rem; background: #f4f4f4; }
-    textarea { width: 100%; height: 200px; margin-bottom: 1rem; }
-    button { padding: 0.5rem 1rem; font-size: 1rem; }
-    pre { background: #fff; padding: 1rem; white-space: pre-wrap; border: 1px solid #ccc; }
+    body {
+      font-family: sans-serif;
+      padding: 2rem;
+      background: #f4f4f4;
+    }
+    textarea {
+      width: 100%;
+      height: 200px;
+      margin-bottom: 1rem;
+      font-family: monospace;
+    }
+    button {
+      padding: 0.5rem 1rem;
+      font-size: 1rem;
+    }
+    .resultado {
+      margin-top: 2rem;
+      padding: 1rem;
+      background: #fff;
+      border: 1px solid #ccc;
+      white-space: pre-wrap;
+    }
+    .parrafo {
+      display: block;
+      padding: 0.5rem;
+      margin-bottom: 0.5rem;
+      border-radius: 5px;
+    }
   </style>
 </head>
 <body>
-  <h1>Reemplazar párrafos duplicados</h1>
+  <h1>Detectar y Marcar Párrafos Duplicados</h1>
   <textarea id="inputText" placeholder="Pega aquí tu texto con varios párrafos..."></textarea>
   <br />
-  <button onclick="procesarTexto()">Procesar</button>
-  <h2>Resultado:</h2>
-  <pre id="outputText"></pre>
+  <button onclick="procesarTexto()">Marcar duplicados</button>
+  <div class="resultado" id="outputText"></div>
 
   <script>
+    const colores = [
+      "#ffcccc", "#ccffcc", "#ccccff", "#ffffcc", "#ffccff",
+      "#ccffff", "#ffd9b3", "#d9ffb3", "#b3d9ff", "#f4cccc"
+    ];
+
     function procesarTexto() {
       const texto = document.getElementById("inputText").value;
-      const parrafos = texto.split(/\n\s*\n/); // Separar por párrafos
-      const vistos = new Set();
-      const resultado = parrafos.map(parrafo => {
-        const limpio = parrafo.trim();
-        if (vistos.has(limpio)) {
-          return "DUPLICADO";
+      const parrafos = texto.split(/\n\s*\n/); // Separar por párrafos dobles saltos de línea
+      const mapaParrafos = new Map();
+      const output = [];
+
+      let colorIndex = 0;
+
+      parrafos.forEach((parrafoOriginal, index) => {
+        const limpio = parrafoOriginal.trim();
+
+        if (limpio === "") return; // Omitir párrafos vacíos
+
+        if (mapaParrafos.has(limpio)) {
+          // Ya existe: usar color del primero
+          const color = mapaParrafos.get(limpio);
+          output.push(`<span class="parrafo" style="background-color: ${color}">${escapeHTML(parrafoOriginal)}</span>`);
         } else {
-          vistos.add(limpio);
-          return parrafo;
+          // Nuevo párrafo: asignar color y guardar
+          const color = colores[colorIndex % colores.length];
+          mapaParrafos.set(limpio, color);
+          output.push(`<span class="parrafo" style="background-color: ${color}">${escapeHTML(parrafoOriginal)}</span>`);
+          colorIndex++;
         }
       });
-      document.getElementById("outputText").textContent = resultado.join("\n\n");
+
+      document.getElementById("outputText").innerHTML = output.join("\n");
+    }
+
+    // Función para evitar inyección HTML
+    function escapeHTML(text) {
+      const div = document.createElement('div');
+      div.textContent = text;
+      return div.innerHTML;
     }
   </script>
 </body>
