--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       padding: 1rem;
       border: 1px solid #ccc;
       white-space: pre-wrap;
-      color: #121212;
+      color: #b5b5b5;
     }
     .parrafo {
       display: block;
@@ -41,6 +41,7 @@
       margin-top: 20px;
       background: #1e1e1e;
       color: #fff;
+      color: #272107;
       border: 1px solid #444;
       padding: 10px;
       border-radius: 4px;
@@ -62,8 +63,8 @@
 
   <script>
     const colores = [
-      "#ffeeba", "#d4edda", "#bee5eb", "#f8d7da", "#c3e6cb", "#d1ecf1",
-      "#f5c6cb", "#cce5ff", "#e2e3e5", "#f1f1f1"
+      "#272107", "#1e3d2f", "#14424a", "#47171a", "#1b3e27", "#15353a",
+      "#54262b", "#1a2f4a", "#2c2d2f", "#3e3232"
     ];
 
     function escapeHTML(text) {
